--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Tare Tweak v2</title>
@@ -18,50 +18,48 @@
 <main class="container">
 
 <section class="card">
-  <h2>Über Tare Tweak v2</h2>
+  <h2>About Tare Tweak v2</h2>
   <p>
-    Tare Tweak v2 ist ein interaktives Windows-Batch-Tool zur Systemoptimierung,
-    Leistungsverbesserung und Reduzierung unnötiger Hintergrunddienste.
-    Alle Funktionen sind über ein menügesteuertes Konsoleninterface erreichbar.
+    Tare Tweak v2 is an interactive Windows batch tool for system optimization, 
+    performance enhancement, and reduction of unnecessary background services. 
+    All features are accessible through a menu-driven console interface.
   </p>
   <p>
-    Beim Start wird automatisch ein Systemwiederherstellungspunkt erstellt,
-    um Änderungen jederzeit rückgängig machen zu können.
+    Upon launch, a system restore point is automatically created so all changes 
+    can be reversed at any time.
   </p>
 </section>
 
 <section class="card">
-  <h2>Funktionen</h2>
+  <h2>Features</h2>
   <ul>
-    <li>✔ Windows-Settings-Optimierung</li>
-    <li>✔ Umfassende Telemetrie- & Datenschutz-Tweaks</li>
-    <li>✔ Debloat-Funktionen (Windows-Apps entfernen / wiederherstellen)</li>
-    <li>✔ CPU- & Energieprofil-Optimierungen</li>
-    <li>✔ I/O- & Eingabeverzögerungs-Tweaks</li>
-    <li>✔ Temp- & Cache-Bereinigung</li>
-    <li>✔ Anpassung der Mouse / Keyboard Data Queue Size</li>
+    <li>✔ Windows settings optimization</li>
+    <li>✔ Comprehensive telemetry & privacy tweaks</li>
+    <li>✔ Debloat functions (remove/reinstall Windows apps)</li>
+    <li>✔ CPU & power profile optimizations</li>
+    <li>✔ I/O & input latency tweaks</li>
+    <li>✔ Temp & cache cleaning</li>
+    <li>✔ Mouse / keyboard data queue size adjustments</li>
   </ul>
 </section>
 
 <section class="card">
-  <h2>Sicherheit</h2>
+  <h2>Security</h2>
   <p>
-    Das Skript verwendet ausschließlich native Windows-Befehle
-    (Batch, Registry, PowerShell).
-    Es wird keine externe Software installiert und es findet keine
-    Datenübertragung statt.
+    The script only uses native Windows commands (Batch, Registry, PowerShell). 
+    No external software is installed, and no data is transmitted.
   </p>
 </section>
 
 <section class="card download">
   <h2>Download</h2>
   <p>Version 2.0 • Windows</p>
-  <a class="button" href="tare-tweak-v2.bat" download>
-    Download (.bat)
+  <a class="button" href="tare-tweak-v2.zip" download>
+    Download (.zip)
   </a>
   <small>
-    Beim Ausführen sind Administratorrechte erforderlich.
-    Windows kann eine Sicherheitswarnung anzeigen.
+    Administrator rights are required to run the script.<br>
+    Windows may show a security warning.
   </small>
 </section>
 
