--- a/index.html
+++ b/index.html
@@ -20,45 +20,46 @@
 <section class="card">
   <h2>About Tare Tweak v2</h2>
   <p>
-    Tare Tweak v2 is an interactive Windows batch tool for system optimization, 
-    performance enhancement, and reduction of unnecessary background services. 
-    All features are accessible through a menu-driven console interface.
+    Tare Tweak v2 is an interactive Windows batch tool for system optimization,
+    performance enhancement, and reducing unnecessary background services.
+    All features are accessible via a menu-driven console interface.
   </p>
   <p>
-    Upon launch, a system restore point is automatically created so all changes 
-    can be reversed at any time.
+    A system restore point is automatically created on start
+    so all changes can be reverted at any time.
   </p>
 </section>
 
 <section class="card">
   <h2>Features</h2>
   <ul>
-    <li>✔ Windows settings optimization</li>
-    <li>✔ Comprehensive telemetry & privacy tweaks</li>
-    <li>✔ Debloat functions (remove/reinstall Windows apps)</li>
-    <li>✔ CPU & power profile optimizations</li>
-    <li>✔ I/O & input latency tweaks</li>
-    <li>✔ Temp & cache cleaning</li>
-    <li>✔ Mouse / keyboard data queue size adjustments</li>
+    <li>✔ Windows Settings Optimization</li>
+    <li>✔ Comprehensive Telemetry & Privacy Tweaks</li>
+    <li>✔ Debloat Functions (Remove/Restore Windows Apps)</li>
+    <li>✔ CPU & Power Profile Optimizations</li>
+    <li>✔ I/O & Input Delay Tweaks</li>
+    <li>✔ Temp & Cache Cleaning</li>
+    <li>✔ Mouse / Keyboard Data Queue Size Adjustment</li>
   </ul>
 </section>
 
 <section class="card">
   <h2>Security</h2>
   <p>
-    The script only uses native Windows commands (Batch, Registry, PowerShell). 
-    No external software is installed, and no data is transmitted.
+    This script only uses native Windows commands
+    (Batch, Registry, PowerShell).
+    No external software is installed and no data is transmitted.
   </p>
 </section>
 
 <section class="card download">
   <h2>Download</h2>
   <p>Version 2.0 • Windows</p>
-  <a class="button" href="tare-tweak-v2.zip" download>
+  <a class="button" href="https://files.catbox.moe/vswj95.zip" download>
     Download (.zip)
   </a>
   <small>
-    Administrator rights are required to run the script.<br>
+    Administrator rights are required to run the tool.
     Windows may show a security warning.
   </small>
 </section>
